--- a/SnapFood/Base.lproj/Main.storyboard
+++ b/SnapFood/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="YB5-yT-V1A">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
@@ -16,22 +16,41 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="11H-Cc-O0C">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="11H-Cc-O0C">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nr8-FM-eBA">
-                                <rect key="frame" x="276" y="506" width="49" height="30"/>
-                                <state key="normal" title="Submit">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DL1-Am-ohF">
+                                <rect key="frame" x="213" y="285" width="173" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="173" id="ifh-RE-B4B"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nr8-FM-eBA">
+                                <rect key="frame" x="277" y="509" width="47" height="30"/>
+                                <state key="normal" title="submit">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DL1-Am-ohF">
-                                <rect key="frame" x="214" y="460" width="173" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="11H-Cc-O0C" secondAttribute="trailing" id="2F7-nQ-bca"/>
+                            <constraint firstItem="Nr8-FM-eBA" firstAttribute="top" secondItem="DL1-Am-ohF" secondAttribute="bottom" constant="194" id="AbP-NS-tdc"/>
+                            <constraint firstItem="11H-Cc-O0C" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="e3O-Js-jdu"/>
+                            <constraint firstItem="11H-Cc-O0C" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="fsd-bf-Ras"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Nr8-FM-eBA" secondAttribute="bottom" constant="61" id="g2x-wV-hTw"/>
+                            <constraint firstItem="11H-Cc-O0C" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="hZl-2U-ZNE"/>
+                            <constraint firstItem="DL1-Am-ohF" firstAttribute="centerX" secondItem="11H-Cc-O0C" secondAttribute="centerX" id="ocf-Hr-kVC"/>
+                            <constraint firstItem="Nr8-FM-eBA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="277" id="ub8-1G-GQZ"/>
+                            <constraint firstItem="Nr8-FM-eBA" firstAttribute="centerX" secondItem="DL1-Am-ohF" secondAttribute="centerX" constant="1" id="wsy-7b-XQC"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="ub8-1G-GQZ"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -76,6 +95,32 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="is9-St-Trz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="992" y="389"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="YKJ-9h-BfT">
+            <objects>
+                <tableViewController id="YB5-yT-V1A" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="IAh-ou-ElP">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="26H-E8-OyG">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="26H-E8-OyG" id="K5g-cM-Tpc">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="YB5-yT-V1A" id="TdS-5D-6z0"/>
+                            <outlet property="delegate" destination="YB5-yT-V1A" id="uDL-2F-Xse"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JFa-eA-VMv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="305" y="1073"/>
         </scene>
     </scenes>
 </document>
