--- a/SnapFood/Base.lproj/Main.storyboard
+++ b/SnapFood/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="YB5-yT-V1A">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="hLB-O1-MKz">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
@@ -7,7 +7,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="SnapFood" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="login" id="BYZ-38-t0r" customClass="LoginViewController" customModule="SnapFood" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,10 +16,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="11H-Cc-O0C">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                            </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DL1-Am-ohF">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nr8-FM-eBA">
+                                <rect key="frame" x="277" y="509" width="47" height="30"/>
+                                <state key="normal" title="submit">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DL1-Am-ohF">
                                 <rect key="frame" x="213" y="285" width="173" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="173" id="ifh-RE-B4B"/>
@@ -27,22 +30,11 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="done"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nr8-FM-eBA">
-                                <rect key="frame" x="277" y="509" width="47" height="30"/>
-                                <state key="normal" title="submit">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="11H-Cc-O0C" secondAttribute="trailing" id="2F7-nQ-bca"/>
                             <constraint firstItem="Nr8-FM-eBA" firstAttribute="top" secondItem="DL1-Am-ohF" secondAttribute="bottom" constant="194" id="AbP-NS-tdc"/>
-                            <constraint firstItem="11H-Cc-O0C" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="e3O-Js-jdu"/>
-                            <constraint firstItem="11H-Cc-O0C" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="fsd-bf-Ras"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Nr8-FM-eBA" secondAttribute="bottom" constant="61" id="g2x-wV-hTw"/>
-                            <constraint firstItem="11H-Cc-O0C" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="hZl-2U-ZNE"/>
-                            <constraint firstItem="DL1-Am-ohF" firstAttribute="centerX" secondItem="11H-Cc-O0C" secondAttribute="centerX" id="ocf-Hr-kVC"/>
                             <constraint firstItem="Nr8-FM-eBA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="277" id="ub8-1G-GQZ"/>
                             <constraint firstItem="Nr8-FM-eBA" firstAttribute="centerX" secondItem="DL1-Am-ohF" secondAttribute="centerX" constant="1" id="wsy-7b-XQC"/>
                         </constraints>
@@ -96,10 +88,10 @@
             </objects>
             <point key="canvasLocation" x="992" y="389"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Image Table View Controller-->
         <scene sceneID="YKJ-9h-BfT">
             <objects>
-                <tableViewController id="YB5-yT-V1A" sceneMemberID="viewController">
+                <tableViewController id="YB5-yT-V1A" customClass="ImageTableViewController" customModule="SnapFood" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="IAh-ou-ElP">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -117,8 +109,27 @@
                             <outlet property="delegate" destination="YB5-yT-V1A" id="uDL-2F-Xse"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="5Z6-Od-5bK"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JFa-eA-VMv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1117" y="1073"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="JMW-sy-jln">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hLB-O1-MKz" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hBg-FL-wZb">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="YB5-yT-V1A" kind="relationship" relationship="rootViewController" id="VqL-uu-PPT"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0vq-CL-Aa9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="305" y="1073"/>
         </scene>
