--- a/SnapFood/Base.lproj/Main.storyboard
+++ b/SnapFood/Base.lproj/Main.storyboard
@@ -16,16 +16,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nr8-FM-eBA">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nr8-FM-eBA">
                                 <rect key="frame" x="277" y="509" width="47" height="30"/>
                                 <state key="normal" title="submit">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="submitButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="icR-v5-n43"/>
+                                </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DL1-Am-ohF">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DL1-Am-ohF">
                                 <rect key="frame" x="213" y="285" width="173" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="173" id="ifh-RE-B4B"/>
+                                    <constraint firstAttribute="width" constant="173" id="huH-Sg-9ne"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="done"/>
@@ -33,10 +36,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Nr8-FM-eBA" firstAttribute="top" secondItem="DL1-Am-ohF" secondAttribute="bottom" constant="194" id="AbP-NS-tdc"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Nr8-FM-eBA" secondAttribute="bottom" constant="61" id="g2x-wV-hTw"/>
+                            <constraint firstItem="DL1-Am-ohF" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="L5J-ah-aOe"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Nr8-FM-eBA" secondAttribute="bottom" constant="61" id="Zrb-rl-8aV"/>
+                            <constraint firstItem="DL1-Am-ohF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="213" id="c50-Fs-RqA"/>
+                            <constraint firstItem="Nr8-FM-eBA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dxq-vp-MFm"/>
                             <constraint firstItem="Nr8-FM-eBA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="277" id="ub8-1G-GQZ"/>
-                            <constraint firstItem="Nr8-FM-eBA" firstAttribute="centerX" secondItem="DL1-Am-ohF" secondAttribute="centerX" constant="1" id="wsy-7b-XQC"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -109,7 +113,13 @@
                             <outlet property="delegate" destination="YB5-yT-V1A" id="uDL-2F-Xse"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="5Z6-Od-5bK"/>
+                    <navigationItem key="navigationItem" id="5Z6-Od-5bK">
+                        <barButtonItem key="rightBarButtonItem" systemItem="camera" id="aDE-k7-Ms8">
+                            <connections>
+                                <segue destination="szK-4h-wP0" kind="presentation" id="qN8-dN-Ixr"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JFa-eA-VMv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
